objects/Veda_Fraud__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>genesis__Applications__c</referenceTo>
        <relationshipLabel>Veda Fraud</relationshipLabel>
        <relationshipName>Veda_Fraud</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCA_Message_Type__c</fullName>
        <label>BCA Message Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Reference__c</fullName>
        <label>Client Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Version_Id__c</fullName>
        <label>Code Version Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Code__c</fullName>
        <label>Description Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dfat_Verification_Indicator__c</fullName>
        <label>Dfat Verification Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Status__c</fullName>
        <label>Error Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Type__c</fullName>
        <label>Error Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fraud_Check_Indicator__c</fullName>
        <label>Fraud Check Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Message__c</fullName>
        <label>General Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Container__c</fullName>
        <label>Input Container</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ofat_Verification_Indicator__c</fullName>
        <label>Ofat Verification Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Xml_Body__c</fullName>
        <label>Request Xml Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Version__c</fullName>
        <label>Response Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Xml_Body__c</fullName>
        <label>Response Xml Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Requested_Id__c</fullName>
        <label>Service Requested Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>show_details__c</fullName>
        <defaultValue>false</defaultValue>
        <label>show details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status_Code__c</fullName>
        <label>status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Veda Fraud</label>
    <nameField>
        <displayFormat>VF-{0000000000}</displayFormat>
        <label>Veda Fraud Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veda Fraud</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>